Add Registration page Added empty registration page and linked it in Home page.

--- a/home.html
+++ b/home.html
@@ -11,5 +11,7 @@
 <body>
 
     There doesn't seem to be anything in here just yet...
+    
+    <a href="registration.html">Register Here</a>
 
 </body>
