Prepare homepage for additions

--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 
 <head align="center">
 
-    <title>Empty Webpage</title>
+    <title>Almost Empty Webpage</title>
         
     <h1>Some Placeholder!</h1>
 
@@ -10,8 +10,12 @@
 
 <body>
 
-    There doesn't seem to be anything in here just yet...
-    
-    <a href="registration.html">Register Here</a>
+    A few places to go from here onwards are :
+    <br/>
+    <a href="registration.html">Registration</a>
+    <br/>
+    <a href="someGame.html">Find an unfinished game here!!</a>
+    <br/>
+    <a href="calculator.html">Calculator</a>
 
 </body>
